@@ -2,6 +2,7 @@
 
 * Fixed a regression when static placeholder was uneditable if it was present
   on the page multiple times
+* Removed globally unique constraint for Apphook configs.
 
 
 === 3.4.0 (2016-09-14) ===
